objects/PEPE_Training_Request__c.object
<CustomObject>
    <fields>
        <fullName>Language__c</fullName>
        <description>Language in which the event is set up for. The Language selection is done by Regional leads at the time of selecting the events</description>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Geography__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Austrian</fullName>
                </value>
                <value>
                    <fullName>Bosnian</fullName>
                </value>
                <value>
                    <fullName>Bulgarian</fullName>
                </value>
                <value>
                    <fullName>Croatian</fullName>
                </value>
                <value>
                    <fullName>Czech</fullName>
                </value>
                <value>
                    <fullName>Danish</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Estonian</fullName>
                </value>
                <value>
                    <fullName>Finish</fullName>
                </value>
                <value>
                    <fullName>Flemish</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Greek</fullName>
                </value>
                <value>
                    <fullName>Hebrew</fullName>
                </value>
                <value>
                    <fullName>Hungarian</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Latvian</fullName>
                </value>
                <value>
                    <fullName>Lithuanian</fullName>
                </value>
                <value>
                    <fullName>Norwegean</fullName>
                </value>
                <value>
                    <fullName>Polish</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Romanian</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Slovene</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Swedish</fullName>
                </value>
                <value>
                    <fullName>Turkish</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Date_to_Submit_Request__c</fullName>
        <formula>Training_Offering_Id__r.Last_Date_to_Submit_Request__c</formula>
        <label>Last Date to Submit Request</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Learning_Partner_Cost__c</fullName>
        <description>Final cost of training delivery by Learning Partner</description>
        <inlineHelpText>Updated from Learning Partner</inlineHelpText>
        <label>Learning Partner Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Learning_Partner_Country__c</fullName>
        <description>Country which the Learning Partner is based in</description>
        <inlineHelpText>Updated from Learning Partner</inlineHelpText>
        <label>Learning Partner Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Burkina Faso</fullName>
                </value>
                <value>
                    <fullName>Burundi</fullName>
                </value>
                <value>
                    <fullName>Cameroon</fullName>
                </value>
                <value>
                    <fullName>Cape Verde</fullName>
                </value>
                <value>
                    <fullName>Central African Republic</fullName>
                </value>
                <value>
                    <fullName>Chad</fullName>
                </value>
                <value>
                    <fullName>Comoros</fullName>
                </value>
                <value>
                    <fullName>Congo, D.R.</fullName>
                </value>
                <value>
                    <fullName>Congo (Brazzaville)</fullName>
                </value>
                <value>
                    <fullName>Cote d'Ivoire</fullName>
                </value>
                <value>
                    <fullName>Croatia</fullName>
                </value>
                <value>
                    <fullName>Cyprus</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Djibouti</fullName>
                </value>
                <value>
                    <fullName>Egypt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Learning_Partner_Name__c</fullName>
        <description>Name of the Learning who is selected for delivery of the training</description>
        <inlineHelpText>Updated from Learning Partner</inlineHelpText>
        <label>Learning Partner Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>5i</fullName>
                </value>
                <value>
                    <fullName>A10 Networks</fullName>
                </value>
                <value>
                    <fullName>Advanced Services</fullName>
                </value>
                <value>
                    <fullName>Alliancesphere</fullName>
                </value>
                <value>
                    <fullName>Altitude</fullName>
                </value>
                <value>
                    <fullName>Aricent</fullName>
                </value>
                <value>
                    <fullName>Augeo Sales Consulting</fullName>
                </value>
                <value>
                    <fullName>Borderless Learning</fullName>
                </value>
                <value>
                    <fullName>BTA</fullName>
                </value>
                <value>
                    <fullName>Business Techical Architects</fullName>
                </value>
                <value>
                    <fullName>Cisco Internals</fullName>
                </value>
                <value>
                    <fullName>Cluster Learning</fullName>
                </value>
                <value>
                    <fullName>Concept Sales</fullName>
                </value>
                <value>
                    <fullName>DC-ACI-Internal</fullName>
                </value>
                <value>
                    <fullName>Del Oro</fullName>
                </value>
                <value>
                    <fullName>Dimension data</fullName>
                </value>
                <value>
                    <fullName>DUMMY</fullName>
                </value>
                <value>
                    <fullName>DUMMY1</fullName>
                </value>
                <value>
                    <fullName>Ekahau</fullName>
                </value>
                <value>
                    <fullName>Engage ESM</fullName>
                </value>
                <value>
                    <fullName>Experteach</fullName>
                </value>
                <value>
                    <fullName>Fastlane</fullName>
                </value>
                <value>
                    <fullName>Firefly</fullName>
                </value>
                <value>
                    <fullName>Flint</fullName>
                </value>
                <value>
                    <fullName>Global Knowledge</fullName>
                </value>
                <value>
                    <fullName>Housley Communications</fullName>
                </value>
                <value>
                    <fullName>Imparta</fullName>
                </value>
                <value>
                    <fullName>Innovise</fullName>
                </value>
                <value>
                    <fullName>InSync Training, LLC</fullName>
                </value>
                <value>
                    <fullName>ITLS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Learning_Partner_PO_Number__c</fullName>
        <description>The Invoice number which the Learning Partner raised to the Logistics and Operations team</description>
        <label>Learning Partner PO Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Learning_Partner_SO_Number__c</fullName>
        <description>The Invoice number which the Learning Partner raised to the Logistics and Operations team</description>
        <label>Learning Partner SO Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <description>Training Curriculum Level</description>
        <formula>TEXT(Training_Offering_Id__r.Level__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Contact_Address__c</fullName>
        <description>This field will contain the Training Offering record linked with this Training Offering</description>
        <label>Local Contact Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Contact_Email__c</fullName>
        <description>Email address of the local Cisco Contact</description>
        <label>Local Site Contact Email</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Contact_Name__c</fullName>
        <description>Name of the local Cisco contact who will be helping with country logistics of the training</description>
        <label>Local Site Contact Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Contact_Number__c</fullName>
        <description>Contact number of the local agent who will be responsible for logistics of the training</description>
        <label>Local Site Contact Number</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_Learning_Partner_Name__c</fullName>
        <description>This field will provide the Name of Local Learning Partner.</description>
        <inlineHelpText>Updated from Learning Partner</inlineHelpText>
        <label>Local Learning Partner Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Site_Contact_Email__c</fullName>
        <label>Local Site Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Auckland</fullName>
                </value>
                <value>
                    <fullName>Brisbane</fullName>
                </value>
                <value>
                    <fullName>Melbourne</fullName>
                </value>
                <value>
                    <fullName>Sydney</fullName>
                </value>
                <value>
                    <fullName>Dhaka</fullName>
                </value>
                <value>
                    <fullName>Phnom Penh</fullName>
                </value>
                <value>
                    <fullName>Beijing</fullName>
                </value>
                <value>
                    <fullName>Guangzhao</fullName>
                </value>
                <value>
                    <fullName>Shanghai</fullName>
                </value>
                <value>
                    <fullName>HongKong</fullName>
                </value>
                <value>
                    <fullName>Bangalore</fullName>
                </value>
                <value>
                    <fullName>Gurgaon</fullName>
                </value>
                <value>
                    <fullName>Mumbai</fullName>
                </value>
                <value>
                    <fullName>NewDelhi</fullName>
                </value>
                <value>
                    <fullName>Jakarta</fullName>
                </value>
                <value>
                    <fullName>Tokyp</fullName>
                </value>
                <value>
                    <fullName>Seoul</fullName>
                </value>
                <value>
                    <fullName>Kualalumpur</fullName>
                </value>
                <value>
                    <fullName>Kathmandu</fullName>
                </value>
                <value>
                    <fullName>Wellington</fullName>
                </value>
                <value>
                    <fullName>Makati</fullName>
                </value>
                <value>
                    <fullName>Manila</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>Colombo</fullName>
                </value>
                <value>
                    <fullName>Taipei</fullName>
                </value>
                <value>
                    <fullName>Bangkok</fullName>
                </value>
                <value>
                    <fullName>Hanoi</fullName>
                </value>
                <value>
                    <fullName>Ho Chi Minh</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location_details_agreed__c</fullName>
        <inlineHelpText>If Proposed host location (refer to Training Event for the Training location details) is not suitable, then select "No" and then provide the Alternate host location details</inlineHelpText>
        <label>Location details agreed ?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Main_Event_Owner__c</fullName>
        <formula>Training_Offering_Id__r.Owner:User.FirstName + ' ' +  Training_Offering_Id__r.Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Main Event Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maximum_Number_of_Participants__c</fullName>
        <description>Enter max number of participants</description>
        <formula>Training_Offering_Id__r.Maximum_Number_of_Participants__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maximum Number of Participants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Number_of_Participants__c</fullName>
        <description>Enter min number of participants</description>
        <formula>Training_Offering_Id__r.Minimum_Number_of_Participants__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Minimum Number of Participants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name_TE__c</fullName>
        <description>Created part of May FY15 release to use in PEPE BLP Java application</description>
        <formula>Training_Offering_Id__r.Name</formula>
        <label>Name TE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note_Location_Details__c</fullName>
        <description>PLEASE provide complete Location information for Material Shipment and also shipment Recipient Name and Email id , this will ensure that the shipment reaches correctly to the right person</description>
        <inlineHelpText>"PLEASE provide complete Location information for Material Shipment and also shipment Recipient Name and Email id , this will ensure that the shipment reaches correctly to the right person"</inlineHelpText>
        <label>Note (Location Details)</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <formula>IMAGE("/resource/1416014243000/PVT_Approval_Note", "Note")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Note</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Attendees__c</fullName>
        <description>Number of attendees who are in training  event</description>
        <inlineHelpText>Updated from Learning Partner</inlineHelpText>
        <label>Number of Attendees</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Partner_Companies_Attended__c</fullName>
        <description>The number of Partner companies from which the attendees represented</description>
        <inlineHelpText>Updated from Learning Partner</inlineHelpText>
        <label>Number of Partner Companies Attended</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Registrants__c</fullName>
        <description>Number of people who registered for the event. The Partner registration is done in CVENT tool</description>
        <inlineHelpText>Updated from Learning Partner</inlineHelpText>
        <label>Number of Registrants</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Trainees_Estimated__c</fullName>
        <description>The estimated number of people who are expected to attend the training</description>
        <label>Number of Trainees Estimated</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Objectives__c</fullName>
        <description>The objective of the training as defined by the Event creator</description>
        <label>Objectives</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Offering_Url_2__c</fullName>
        <formula>IF(Training_Offering_Id__r.Offering_Url_2__c = "", "",
IF(
OR(LEFT(Training_Offering_Id__r.Offering_Url_2__c, 7) = "http://",LEFT(Training_Offering_Id__r.Offering_Url_2__c, 8) = "https://"), 
HYPERLINK( Training_Offering_Id__r.Offering_Url_2__c , Training_Offering_Id__r.Offering_Url_2__c ), 
HYPERLINK( "http://" &amp; Training_Offering_Id__r.Offering_Url_2__c , Training_Offering_Id__r.Offering_Url_2__c )
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offering URL 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offering_Url_3__c</fullName>
        <formula>IF(Training_Offering_Id__r.Offering_Url_3__c = "", "",
IF(
OR(LEFT(Training_Offering_Id__r.Offering_Url_3__c , 7) = "http://",LEFT(Training_Offering_Id__r.Offering_Url_3__c , 8) = "https://"), 
HYPERLINK( Training_Offering_Id__r.Offering_Url_3__c , Training_Offering_Id__r.Offering_Url_3__c ), 
HYPERLINK( "http://" &amp; Training_Offering_Id__r.Offering_Url_3__c , Training_Offering_Id__r.Offering_Url_3__c )
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offering URL 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offering_Url__c</fullName>
        <description>Training Offering URL</description>
        <formula>IF(Training_Offering_Id__r.Offering_Url__c = "", "",
	IF(
		OR(LEFT(Training_Offering_Id__r.Offering_Url__c, 7) = "http://",LEFT(Training_Offering_Id__r.Offering_Url__c, 8) = "https://"), 
		HYPERLINK( Training_Offering_Id__r.Offering_Url__c , Training_Offering_Id__r.Offering_Url__c ), 
		HYPERLINK( "http://" &amp; Training_Offering_Id__r.Offering_Url__c , Training_Offering_Id__r.Offering_Url__c )
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offering URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Optional_Details_URL__c</fullName>
        <description>Optional details posted at main event level is populated here.</description>
        <formula>IF( Training_Offering_Id__r.Optional_Details_URL__c  = "", "",
IF(
OR(LEFT(Training_Offering_Id__r.Optional_Details_URL__c , 7) = "http://",LEFT(Training_Offering_Id__r.Optional_Details_URL__c , 8) = "https://"), 
HYPERLINK( Training_Offering_Id__r.Optional_Details_URL__c  , Training_Offering_Id__r.Optional_Details_URL__c ), 
HYPERLINK( "http://" &amp; Training_Offering_Id__r.Optional_Details_URL__c  , Training_Offering_Id__r.Optional_Details_URL__c )
)
)</formula>
        <label>Optional Details URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Costs__c</fullName>
        <description>Additional costs</description>
        <formula>Training_Offering_Id__r.Other_Costs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Costs</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Email__c</fullName>
        <description>This will provide the Owner Email Id from related Training Request.</description>
        <label>Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Owner_Phone__c</fullName>
        <description>This will provide the Owner Phone # from related Training Request.</description>
        <label>Owner Phone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PDP_Mailer_PP__c</fullName>
        <description>This is for Dec 2016 release.</description>
        <label>PDP_Mailer_PP</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PEPE_Record_Type__c</fullName>
        <formula>TEXT(Training_Offering_Id__r.PEPE_Record_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PEPE Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLP_Email_Field_01__c</fullName>
        <description>This plp email field gets auto updated by wf on basis of plp selected</description>
        <label>PLP Email Field 01</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PLP_Email_Field_02__c</fullName>
        <description>This is to update PLP email id</description>
        <label>PLP Email Field 02</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PLP_Email_Field_03__c</fullName>
        <description>This field get PLP email id updated</description>
        <label>PLP Email Field 03</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <description>P+ new fields for July release 18</description>
        <label>PO Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Value_in_USD__c</fullName>
        <description>P+ new fields for July release 18</description>
        <label>PO Value (in USD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PTP_flag__c</fullName>
        <inlineHelpText>Displays the button to “Register” to the event if this field value is set to “Yes” or Displays the button to “Request” (send email) if this field values is set to “No” + Publish to Calendar? is set to “Yes”</inlineHelpText>
        <label>Registration open for all</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Publish_to_Calendar__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Participant_Types__c</fullName>
        <description>Different role of participants/audience registering  for the training.</description>
        <inlineHelpText>Updated from Learning Partner</inlineHelpText>
        <label>Participant Type(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>Management</fullName>
                </value>
                <value>
                    <fullName>Mixed</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>SE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Plus_Point_of_Contact__c</fullName>
        <description>The Regional Lead who has requested for the training</description>
        <formula>"rmonteir@cisco.com"</formula>
        <label>Partner Plus Point of Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <formula>TEXT(Training_Offering_Id__r.Platform__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Platform</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potential_Learning_Partners__c</fullName>
        <description>Selected LOVs for Potential Learning Partner is shown on TR</description>
        <formula>IF(INCLUDES(Training_Offering_Id__r.Potential_Learning_Partners__c, "2 Mark-IT") ,"2 Mark-IT", "")
&amp; 
IF(INCLUDES(Training_Offering_Id__r.Potential_Learning_Partners__c, "4sight") ,"4sight", "")
&amp; 
IF(INCLUDES(Training_Offering_Id__r.Potential_Learning_Partners__c, "5i") ,"5i", "")
&amp; 
IF(INCLUDES(Training_Offering_Id__r.Potential_Learning_Partners__c, "Alef") ,"Alef", "")
&amp; 
IF(INCLUDES(Training_Offering_Id__r.Potential_Learning_Partners__c, "AlefNula") ,"AlefNula", "")
&amp; 
IF(INCLUDES(Training_Offering_Id__r.Potential_Learning_Partners__c, "ALS") ,"ALS", "")
&amp; 
IF(INCLUDES(Training_Offering_Id__r.Potential_Learning_Partners__c, "Areon") ,"Areon", "")
&amp; 
IF(INCLUDES(Training_Offering_Id__r.Potential_Learning_Partners__c, "Bitnett") ,"Bitnett", "")
&amp; 
IF(INCLUDES(Training_Offering_Id__r.Potential_Learning_Partners__c, "Cisco") ,"Cisco", "")
&amp; 
IF(INCLUDES(Training_Offering_Id__r.Potential_Learning_Partners__c, "Cisco AM") ,"Cisco AM", "")
&amp; 
IF(INCLUDES(Training_Offering_Id__r.Potential_Learning_Partners__c, "Cluster Learning") ,"Cluster Learning", "")
&amp; 
IF(INCLUDES(Training_Offering_Id__r.Potential_Learning_Partners__c, "Edinburgh Business School") ,"Edinburgh Business School", "")
&amp; 
IF(INCLUDES(Training_Offering_Id__r.Potential_Learning_Partners__c, "EURO RSCG") ,"EURO RSCG", "")
&amp; 
IF(INCLUDES(Training_Offering_Id__r.Potential_Learning_Partners__c, "Experteach") ,"Experteach", "")
&amp; 
IF(INCLUDES(Training_Offering_Id__r.Potential_Learning_Partners__c, "Fast Lane") ,"Fast Lane", "")
&amp; 
IF(INCLUDES(Training_Offering_Id__r.Potential_Learning_Partners__c, "Fast Lane Dubai") ,"Fast Lane Dubai", "")
&amp; 
IF(INCLUDES(Training_Offering_Id__r.Potential_Learning_Partners__c, "Firefly") ,"Firefly", "")
&amp; 
IF(INCLUDES(Training_Offering_Id__r.Potential_Learning_Partners__c, "Firefly/UpDate") ,"Firefly/UpDate", "")
&amp; 
IF(INCLUDES(Training_Offering_Id__r.Potential_Learning_Partners__c, "ForTeam Consult") ,"ForTeam Consult", "")
&amp; 
IF(INCLUDES(Training_Offering_Id__r.Potential_Learning_Partners__c, "Global Knowledge") ,"Global Knowledge", "")
&amp; 
IF(INCLUDES(Training_Offering_Id__r.Potential_Learning_Partners__c, "Inkom/Knowledge Centre") ,"Inkom/Knowledge Centre", "")
&amp; 
IF(INCLUDES(Training_Offering_Id__r.Potential_Learning_Partners__c, "Innovise") ,"Innovise", "")
&amp; 
IF(INCLUDES(Training_Offering_Id__r.Potential_Learning_Partners__c, "Institut za menadzment") ,"Institut za menadzment", "")
&amp; 
IF(INCLUDES(Training_Offering_Id__r.Potential_Learning_Partners__c, "Intuition") ,"Intuition", "")
&amp; 
IF(INCLUDES(Training_Offering_Id__r.Potential_Learning_Partners__c, "ITLS") ,"ITLS", "")
&amp; 
IF(INCLUDES(Training_Offering_Id__r.Potential_Learning_Partners__c, "J5") ,"J5", "")
&amp; 
IF(INCLUDES(Training_Offering_Id__r.Potential_Learning_Partners__c, "Knowledge Center Incom/Areon") ,"Knowledge Center Incom/Areon", "")
&amp; 
IF(INCLUDES(Training_Offering_Id__r.Potential_Learning_Partners__c, "Mamentor") ,"Mamentor", "")
&amp; 
IF(INCLUDES(Training_Offering_Id__r.Potential_Learning_Partners__c, "MD Services") ,"MD Services", "")
&amp; 
IF(INCLUDES(Training_Offering_Id__r.Potential_Learning_Partners__c, "Microtest") ,"Microtest", "")
&amp; 
IF(INCLUDES(Training_Offering_Id__r.Potential_Learning_Partners__c, "Mira Telecomunicacions") ,"Mira Telecomunicacions", "")
&amp; 
IF(INCLUDES(Training_Offering_Id__r.Potential_Learning_Partners__c, "Pres s.r.l.") ,"Pres s.r.l.", "")
&amp; 
IF(INCLUDES(Training_Offering_Id__r.Potential_Learning_Partners__c, "RRC") ,"RRC", "")
&amp; 
IF(INCLUDES(Training_Offering_Id__r.Potential_Learning_Partners__c, "Skills Connection") ,"Skills Connection", "")
&amp; 
IF(INCLUDES(Training_Offering_Id__r.Potential_Learning_Partners__c, "Smarter") ,"Smarter", "")
&amp; 
IF(INCLUDES(Training_Offering_Id__r.Potential_Learning_Partners__c, "Stitching TopSport") ,"Stitching TopSport", "")</formula>
        <label>Potential Learning Partners</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Survey_Mode__c</fullName>
        <description>Preferred Mode of submitting Survey / Feedback post training delivery</description>
        <label>Preferred Survey Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A survey link needed before the event to ask attendees to fill in the online survey in the classroom</fullName>
                </value>
                <value>
                    <fullName>The survey to be sent out after the event together with a “Thank you” email automatically from CVENT tool</fullName>
                </value>
                <value>
                    <fullName>Survey to be conducted in the classroom in paper version</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Focus__c</fullName>
        <description>For Cvent Integration , read Primary Focus from TE</description>
        <formula>Text(Training_Offering_Id__r.Primary_Focus__c)</formula>
        <label>Primary Focus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_request__c</fullName>
        <label>PRIMARY REQUEST ( MAIN HUB )</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <description>The training Program which the training was set for</description>
        <formula>TEXT(Training_Offering_Id__r.Program__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program</label>
        <type>Text</type>
    </fields>
</CustomObject>